# OpenGL

./: CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
shader/: texture.fs  texture.vs
src/: .clang-format  buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
step_by_step/step00/: CMakeLists.txt
step_by_step/step00_1/: CMakeLists.txt  Dependency.cmake
step_by_step/step00_1/src/: main.cpp
step_by_step/step00_2/: CMakeLists.txt  Dependency.cmake
step_by_step/step00_2/src/: main.cpp
step_by_step/step01/: CMakeLists.txt
step_by_step/step01/src/: main.cpp
step_by_step/step02/: CMakeLists.txt
step_by_step/step02/shader/: simple.fs  simple.vs
step_by_step/step02/src/: common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h
